--- a/Dockerfile_webdesktop
+++ b/Dockerfile_webdesktop
@@ -17,6 +17,16 @@ RUN \
   echo "**** cleanup ****" && \
   rm -rf /tmp/*
 
+RUN \
+    echo "installing dotnet" && \
+    wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh && \
+    chmod +x dotnet-install.sh && \
+    ./dotnet-install.sh --version latest && \
+    export DOTNET_ROOT=$HOME/.dotnet && \
+    export PATH=$PATH:$DOTNET_ROOT:$DOTNET_ROOT/tools && \
+    dotnet tool install --global ilspycmd && \
+    dotnet tool install -g sfextract
+
 WORKDIR /config/Desktop
 
 COPY src/main/resources/executables/*linux* /var/tmp/wrongsecrets/
