--- a/src/main/resources/wrong-secrets-configuration.yaml
+++ b/src/main/resources/wrong-secrets-configuration.yaml
@@ -775,3 +775,15 @@ configurations:
       category: *secrets
       ctf:
         enabled: false
+    - name: Challenge 50
+      short-name: "challenge-50"
+      sources:
+        - class-name: "org.owasp.wrongsecrets.challenges.docker.Challenge50"
+          explanation: "explanations/challenge50.adoc"
+          hint: "explanations/challenge50_hint.adoc"
+          reason: "explanations/challenge50_reason.adoc"
+          environments: *all_envs
+      difficulty: *normal
+      category: *bin
+      ctf:
+        enabled: true
