--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,6 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 0.13.1
