--- a/.github/workflows/challenge13.yml
+++ b/.github/workflows/challenge13.yml
@@ -13,6 +13,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Dump and exfiltrate
         shell: bash
         env:
