--- a/.github/workflows/container_test.yml
+++ b/.github/workflows/container_test.yml
@@ -19,6 +19,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up JDK 22
         uses: actions/setup-java@v4
         with:
