--- a/.github/workflows/dast-zap-test.yml
+++ b/.github/workflows/dast-zap-test.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up JDK 22
         uses: actions/setup-java@v4
         with:
