--- a/.github/workflows/heroku_tests.yml
+++ b/.github/workflows/heroku_tests.yml
@@ -21,6 +21,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Run Tests
         run: |
           cd src/test/e2e
