--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        lfs: true
+        with:
+          lfs: true
       - name: Set up JDK 22
         uses: actions/setup-java@v4
         with:
@@ -40,6 +41,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up JDK 22
         uses: actions/setup-java@v4
         with:
@@ -56,6 +59,8 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up JDK 22
         uses: actions/setup-java@v4
         with:
