--- a/.github/workflows/minikube-k8s-test.yml
+++ b/.github/workflows/minikube-k8s-test.yml
@@ -21,6 +21,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Start minikube
         uses: medyagh/setup-minikube@master
         with:
