--- a/.github/workflows/minikube-vault-test.yml
+++ b/.github/workflows/minikube-vault-test.yml
@@ -21,6 +21,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - uses: eLco/setup-vault@v1.0.3
       - name: Start minikube
         uses: medyagh/setup-minikube@master
@@ -41,6 +43,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - uses: eLco/setup-vault@v1.0.3
       - name: Start minikube
         uses: medyagh/setup-minikube@master
