disable lfs where it doe snot matter

--- a/.github/workflows/challenge13.yml
+++ b/.github/workflows/challenge13.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          lfs: true
+          lfs: false
       - name: Dump and exfiltrate
         shell: bash
         env:
