--- a/.github/workflows/minikube-k8s-test.yml
+++ b/.github/workflows/minikube-k8s-test.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          lfs: true
+          lfs: false
       - name: Start minikube
         uses: medyagh/setup-minikube@master
         with:
