--- a/.github/workflows/container_test.yml
+++ b/.github/workflows/container_test.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          lfs: true
+          lfs: false
       - name: Set up JDK 22
         uses: actions/setup-java@v4
         with:
