--- a/.github/workflows/heroku_tests.yml
+++ b/.github/workflows/heroku_tests.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          lfs: true
+          lfs: false
       - name: Run Tests
         run: |
           cd src/test/e2e
