--- a/src/main/resources/wrong-secrets-configuration.yaml
+++ b/src/main/resources/wrong-secrets-configuration.yaml
@@ -814,3 +814,17 @@ configurations:
       category: *secrets
       ctf:
         enabled: true
+
+    - name: Challenge 52
+      short-name: "challenge-52"
+      sources:
+       - class-name: "org.owasp.wrongsecrets.challenges.docker.Challenge50"
+         explanation: "explanations/challenge52.adoc"
+         hint: "explanations/challenge52_hint.adoc"
+         reason: "explanations/challenge52_reason.adoc"
+         environments: *docker_envs
+      difficulty: *medium
+      category: *secrets
+      ctf:
+        enabled: true
+
