Update master-container-publish.yml for mp

--- a/.github/workflows/master-container-publish.yml
+++ b/.github/workflows/master-container-publish.yml
@@ -81,6 +81,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v5
         with:
+          platforms: linux/amd64,linux/arm64
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
