--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,6 +81,7 @@ management.health.readinessState.enabled=true
 management.endpoints.web.exposure.include=auditevents,info,health
 chalenge_docker_mount_secret=/var/run/secrets2
 BASTIONHOSTPATH=.ssh
+PROJECTSPECPATH=./cursor/rules/project-specification.mdc
 #---
 spring.config.activate.on-profile=kubernetes-vault
 wrongsecretvalue=wrongsecret
@@ -98,6 +99,7 @@ spring.cloud.vault.kubernetes.service-account-token-file=/var/run/secrets/kubern
 spring.config.activate.on-profile=local
 challengedockermtpath=./
 BASTIONHOSTPATH=.ssh
+PROJECTSPECPATH=./cursor/rules/project-specification.mdc
 asciidoctor.enabled=true
 #---
 spring.config.activate.on-profile=local-vault
