undo copilot issues: have git ignore removed and add the right snippets

--- a/src/main/resources/wrong-secrets-configuration.yaml
+++ b/src/main/resources/wrong-secrets-configuration.yaml
@@ -887,6 +887,7 @@ configurations:
           explanation: "explanations/challenge57.adoc"
           hint: "explanations/challenge57_hint.adoc"
           reason: "explanations/challenge57_reason.adoc"
+          ui-snippet: "challenges/challenge-57/challenge-57.snippet"
           environments: *all_envs
       difficulty: *normal
       category: *ai
@@ -900,6 +901,7 @@ configurations:
           explanation: "explanations/challenge58.adoc"
           hint: "explanations/challenge58_hint.adoc"
           reason: "explanations/challenge58_reason.adoc"
+          ui-snippet: "challenges/challenge-58/challenge-58.snippet"
           environments: *all_envs
       difficulty: *normal
       category: *logging
